@@ -116,7 +116,3 @@
 - verify vecsum overflow works correctly for 32-bit UV.
 
 - export is_euler_plumb_pseudoprime, docs, test
-
-- add logint
-
-- consider ramanujan_sum.
