@@ -6,6 +6,7 @@ Revision history for Perl module Math::Prime::Util
 
     - is_prime_power         Returns k if n=p^k for p a prime.
     - logint(n,b)            Integer logarithm.  Largest e s.t. b^e <= n.
+    - ramanujan_sum(k,n)     Ramanujan's sum
 
     [FUNCTIONALITY AND PERFORMANCE]
 
@@ -30,6 +31,10 @@ Revision history for Perl module Math::Prime::Util
       is_power about 2-3x faster for native inputs.
 
     - forcomposites / foroddcomposites about 1.2x faster past 64-bit.
+
+    - exp_mangoldt rewritten to use is_prime_power.
+
+    - internal integer root rewritten.
 
 
 
